2009-12-25  Donal K. Fellows  <dkf@users.sf.net>

	* doc/option.n: [Bug 2914943]: Correct the first example.
	Also define what the format of option patterns is; that's a much less
	commonly known fact than it used to be.

2009-12-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:		Sync with current Tcl version.
	* unix/Makefile.in:	Use EXE_SUFFIX for Cygwin, and install
				libtk8.6.dll in bin directory.
	* unix/configure:	(regenerated)

2009-12-22  Joe English  <jenglish@users.sourceforge.net>
	
	* library/ttk/sizegrip.tcl: [Bug 2912356]: Patch to avoid bizarro
	behavior under compiz.

2009-12-20  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixSend.c (ServerSecure): [Patch 2917663]: Better support
	for server-interpreted access control addreses.

2009-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkListbox.c:	Fix gcc warning: ignoring return value of
				"strtol", declared with attribute
				warn_unused_result.
	* unix/tkUnixEvent.c:   Fix gcc warning: dereferencing pointer
				"xgePtr" does break strict-aliasing rules.
	* generic/tkInt.decls:  CONSTify return values of TkKeysymToString,
	* generic/tkBind.c      TkFindStateString, TkpGetString, TkpGetChar,
	* generic/tkIntDecls.h  which are all not supposed to be modified by
	* generic/tkUtil.c      the caller. In tkUtil.c this gets rid of a
	* carbon/tkMacOSXKeyboard.c   dangerous type cast.
	* macosx/tkMacOSXKeyboard.c
	* unix/tkUnixKey.c
	* win/tkWinKey.c

2009-12-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConfig.c:	Added another dimension of refCounting to the
	* generic/tkInt.c:	"option" Tcl_ObjType to improve memory troubles
	* generic/tkObj.c:	detailed in [Bug 2492179].  Also removed
	registration of the "option" Tcl_ObjType.
	*** POTENTIAL INCOMPATIBILITY *** for callers of
	Tcl_GetObjType("option") which must now handle a NULL return.

2009-12-15  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/unicodeout.tcl (usePresentationFormsFor): Split out